syntax = "proto3";
package raftchat;

service RaftChat {
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesRes);
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteRes);
  rpc UserRequest(UserRequestArgs) returns (UserRequestRes);
}

message Command {
  string client_id = 1;
  uint64 message_id = 2;
  bytes data = 3;
}

message Entry {
  uint64 term = 1;
  optional Command command = 2;
}

message AppendEntriesArgs {
  uint64 term = 1;
  string leader_id = 2;
  // invariant : prev_length = 0 -> prev_term = 0
  uint64 prev_length = 3;
  uint64 prev_term = 4;
  repeated Entry entries = 5;
  uint64 committed_length = 6;
}

message AppendEntriesRes {
  uint64 term = 1;
  bool success = 2;
}

message RequestVoteArgs {
  uint64 term = 1;
  string candidate_id = 2;
  // invariant : prev_length = 0 -> prev_term = 0
  uint64 prev_length = 3;
  uint64 prev_term = 4;
}

message RequestVoteRes {
  uint64 term = 1;
  bool vote_granted = 2;
}

message UserRequestArgs {
  string client_id = 1;
  uint64 message_id = 2;
  bytes data = 3;
}

message UserRequestRes {
  bool success = 1;
}
